tests/NormalTests/paczka1/fuzzy1/45971455.err
Error in line 3: S232 S677 62,8
Error in line 5: foc6m S232 16,7
Error in line 15: foc6m S677 79,5
Error in line 24: foc6m S232 1,1
